fix mobile token bug